# iiwa-trajectory-planning

./: .gitignore  CLAUDE.md  LICENSE  README.md  interview_prep.txt
.github/workflows/: ci.yml
assets/: comparison_smooth_post.json  comparison_smooth_post.md  raw_trajectory_summary.json
data/: trajectory_raw_4001x7.txt  trajectory_smooth_4001x7.txt
docs/: gazebo_simulation_plan.md
scripts/: analyze_trajectory.py  generate_smooth_trajectory.py
simulation/: README.md
simulation/ros2_ws/src/iiwa_trajectory_demo/: package.xml  setup.cfg  setup.py
simulation/ros2_ws/src/iiwa_trajectory_demo/iiwa_trajectory_demo/: __init__.py  move_to_target.py  pick_and_place.py  scene_setup.py  trajectory_replay.py
simulation/ros2_ws/src/iiwa_trajectory_demo/launch/: iiwa_replay.launch.py
simulation/ros2_ws/src/iiwa_trajectory_demo/resource/: iiwa_trajectory_demo
src/: main_raw_cartesian_ik.m  main_smooth_joint_traj.m
